# 19-team-project-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  RunPod.Dockerfile  docker-compose.yml  handler.py  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug-report-template.md  issue-template.md  sprint-backlog-template.md
.github/workflows/: ai-ci-cd.yaml  ai-ci-cd.yml  cd-dev.yml  cd-k8s.yml  cd-prod-v2.yml  cd-prod.yml  cd.yml  ci.yml  rollback.yml
ai_app/: main.py  requirements.txt
ai_app/adapters/: __init__.py  backend_client.py  db_client.py  llm_client.py  storage_client.py
ai_app/adapters/job_crawlers/: __init__.py  base_crawler.py  general_crawler.py  jobkorea_crawler.py  saramin_crawler.py  wanted_crawler.py
ai_app/api/: main.py
ai_app/api/endpoints/: __init__.py  agent_router.py  health_router.py  jobs_router.py  reco_router.py  repo_router.py  resumes_router.py
ai_app/controllers/: __init__.py  agent_controller.py  jobs_controller.py  reco_controller.py  repo_controller.py  reports_controller.py  resumes_controller.py
ai_app/middleware/: __init__.py  cloudwatch_metrics.py  otel_lgtm_metrics.py
ai_app/prompts/: __init__.py  aimento_d3_system.md  feedback_extract_system.md  intent_router_system.md  mentor_card_system.md  report_analysis_system.md  report_analysis_user.md  resume_extraction_system.md  resume_extraction_user.md  slot_filling_system.md  vlm_ocr_pii_system.md  vlm_ocr_pii_user.md
ai_app/schemas/: agent.py  common.py  feedback.py  jobs.py  reco.py  repo.py  resumes.py
ai_app/services/agent/: __init__.py  graph.py  intent_router.py  mentor_search.py  session.py  slot_filling.py
ai_app/services/doc_ai/: README.md  __init__.py  field_extractor.py  image_pdf_processor.py  parse_pipeline.py  pdf_parser.py  pii_masker.py
ai_app/services/eval/: check_backend.py  check_db.py  evaluator.py  run_eval.py  testset_generator.py
ai_app/services/job_crawler/: __init__.py  crawler_service.py
ai_app/services/reco/: __init__.py  embedder.py  retrieval.py
ai_app/services/repo/: __init__.py  feedback_collector.py  job_parser.py  pii_masker.py  report_pipeline.py  scoring.py  seed_loader.py  summarizer.py  utils.py
charts/refit-ai/: Chart.yaml  values-prod.yaml  values.yaml
charts/refit-ai/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute-healthcheck.yaml  httproute.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: CLOUDWATCH_SETUP.md  DEPLOYMENT_FLOW.md
docs/runbooks/: README.md  rollback-ai-service.md
scripts/: cleanup-ai-processes.sh  health-check.sh  load-test-for-metrics.sh  sync-requirements.sh  sync-to-pyproject.py  sync_deps.py  upgrade-python-to-3.11.sh  verify-slo-cloudwatch.sh
