
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refit-ai-service"
version = "0.1.0"
description = "Re-Fit AI Service API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "boto3>=1.28.0",
    "fastapi>=0.109.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pgvector>=0.2.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.0.0",
    "typer>=0.9.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # 의존성 충돌 방지: grpcio 버전 고정
    "grpcio>=1.60.0,<1.70.0",
    "grpcio-status>=1.60.0,<1.70.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "build>=1.0.0",
]

[tool.setuptools]
include-package-data = true  # MANIFEST.in 사용

# Wheel에 prompts/*.md 명시적 포함 (배포 시 누락 방지)
[tool.setuptools.package-data]
ai_app = ["prompts/*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_app*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
# B110: try_except_pass - 코드에서 의도적 예외 무시 시 허용 (추후 개선 권장)
skips = ["B110"]